@@ -5,6 +5,8 @@
         * README.api-changes: added, please add any observations
         on suboptimal API translations here.
         * GObject.xs: add gperl_object_package_from_type_recursive.
+	* gperl.h: make gperl_sv_from_value arg const.
+        * GType.xs: implement standard class "methods" as functions.
 
 2003/06/24 23:16 muppetman
 
